# kilo-map

./: .gitignore  LICENSE  README.md  README_CN.md
legkilo/: CMakeLists.txt  package.xml
legkilo/cmake/: LegKiloRosVersion.cmake  iridescence.cmake  kiss_matcher.cmake  nanoflann.cmake  small_gicp.cmake
legkilo/config/: backpack_hesai.yaml  diter_go2_ouster.yaml  legkilo_go1_velodyne.yaml  m3dgr_mid360.yaml  mars_lvig_avia.yaml  nclt_velodyne.yaml  quadruped_slam_velodyne.yaml  superloc_velodyne.yaml
legkilo/launch/: backpack_hesai.launch  debug.launch  diter_go2_ouster.launch  legkilo_go1_velodyne.launch  m3dgr_mid360.launch  mars_lvig_avia.launch  nclt_velodyne.launch  quadruped_slam_velodyne.launch  superloc_velodyne.launch
legkilo/launch_ros2/: debug.launch.py  legkilo_go1_velodyne.py
legkilo/rviz/: legkilo.rviz
legkilo/src/apps/: leg_kilo_node.cc  leg_kilo_node_ros2.cc
legkilo/src/common/: file_io.hpp  glog_utils.hpp  kernel.hpp  math_utils.hpp  pcd_saver.hpp  pcl_types.h  sensor_types.hpp  timer_utils.hpp  trajectory_saver.hpp  voxel_grid.hpp  yaml_helper.hpp
legkilo/src/core/slam/backend/: backend.cc  backend.h  submap.cc  submap.h
legkilo/src/core/slam/backend/factor_graph/: ceres_factor.h  factor_graph.cc  factor_graph.h  graph_utils.h
legkilo/src/core/slam/backend/loop_closure/: loop_closure.cc  loop_closure.h
legkilo/src/core/slam/backend/loop_closure/loop_detector/: euclidean_method.cc  euclidean_method.h
legkilo/src/core/slam/frontend/: KILO.cc  KILO.h  State.cc  State.h  eskf.cc  eskf.h  gaussian_voxel_map.cc  gaussian_voxel_map.h  voxel_map_utils.hpp
legkilo/src/core/slam/tool/: slam_result_recorder.h  slam_result_saver.cc  slam_result_saver.h  tiled_map.cc  tiled_map.h
legkilo/src/interface/common/: options.cc  options.h  ros_build_config.h  ros_compat.h
legkilo/src/interface/ros1/: ros_interface.cc  ros_interface.h
legkilo/src/interface/ros2/: ros_interface.cc  ros_interface.h
legkilo/src/preprocess/: kinematics.cc  kinematics.h  lidar_processing.cc  lidar_processing.h  state_initial.hpp
legkilo/src/viewer/: viewer_base.cc  viewer_base.h  viewer_slam_interface.cc  viewer_slam_interface.h
legkilo/src/viewer/viewer_modal/: save_slam_result_modal.cc  save_slam_result_modal.h
legkilo/test/: CMakeLists.txt  test_tbb.cc
msg/livox_ros_driver/: CMakeLists.txt  package.xml
msg/livox_ros_driver2/: CMakeLists.txt  package.xml
msg/livox_ros_driver2/cmake/: LegKiloRosVersion.cmake
msg/unitree_legged_msgs/: CMakeLists.txt  package.xml
msg/unitree_legged_msgs/msg_ros2/: BmsCmd.msg  BmsState.msg  HighCmd.msg  HighState.msg  LowCmd.msg  LowState.msg
